# useful-cli-py-apps

ASCII/: pyproject.toml
ASCII/tests/: __init__.py
book_finder/: pyproject.toml
book_finder/src/book_finder/: __init__.py
